--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -258,9 +258,9 @@
    "source": [
     "import json\n",
     "\n",
-    "# x = [len(item) for item in df[\"tokens\"].tolist()]\n",
-    "# y = [round((len(set(item)) / len(item)) * 100) for item in df[\"tokens\"].tolist()]\n",
-    "# colors = [\"red\" if item == \"human\" else \"blue\" for item in df[\"category\"].tolist()]\n",
+    "x = [len(item) for item in df[\"tokens\"].tolist()]\n",
+    "y = [round((len(set(item)) / len(item)) * 100) for item in df[\"tokens\"].tolist()]\n",
+    "colors = [\"red\" if item == \"human\" else \"blue\" for item in df[\"category\"].tolist()]\n",
     "\n",
     "data = []\n",
     "for i, item in enumerate(df[\"tokens\"].tolist()):\n",
